# atomic-enums

./: .gitignore  Cargo.toml  out.rs
atomic-enum-derive/: Cargo.toml
atomic-enum-derive/src/: code_gen.rs  lib.rs  parser.rs
src/: lib.rs  lib2.rs
