[package]
name = "atomic-enums"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["atomic", "enum"]
repository = "https://github.com/felix1507/atomic-enum"
description = "Provides atomic enumerations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-enum-derive = { version = "0.1.0" }
